Fixed the CSS broken in the last deployment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,3 @@
-p {
-  color: pink;
-}
 .hidden {
   display: none;
 }
